5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1785_1599.log
== TEST (2019-05-30 10:09:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma = soma + desc * v[i]
	elif (v[i] < 80.0):
		soma = soma + v[i]
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:15:27) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma = 0
desc = 15 / 100
tf = zeros(int(v), dtype)
while (i < size(v)):
	if (v[i] >= 80.0):
		tf = v[i]
	print(tf)
	elif (v[i] < 80.0):
		soma = soma + v[i]
print(round(soma, 2))
-- EXECUTION TIME:
0.307377
-- ERROR:
  File "/home/codebench/codes/1785/1599/main.py", line 11
    elif (v[i] < 80.0):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:15:28) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma = 0
desc = 15 / 100
tf = zeros(int(v), dtype)
while (i < size(v)):
	if (v[i] >= 80.0):
		tf = v[i]
	print(tf)
	elif (v[i] < 80.0):
		soma = soma + v[i]
print(round(soma, 2))
-- ERROR:
File "XXXX", line 11
    elif (v[i] < 80.0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:33) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma = soma + v[i] * desc
	elif (v[i] < 80.0):
		soma = soma + v[i]
	i = i + 1
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:30:44) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma2 = 0
soma1 = 0
s = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
while (s < size(v)):
	elif (v[i] < 80.0):
		soma2 = soma2 + v[i]
	i = i + 1
	s = s + 1
total = soma1 + soma2
print(round(total, 2))
-- ERROR:
File "XXXX", line 12
    elif (v[i] < 80.0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:30:51) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma2 = 0
soma1 = 0
s = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
while (s < size(v)):
	if (v[i] < 80.0):
		soma2 = soma2 + v[i]
	i = i + 1
	s = s + 1
total = soma1 + soma2
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:59) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma2 = 0
soma1 = 0
s = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[i] < 80.0):
		soma2 = soma2 + v[i]
	s = s + 1
total = soma1 + soma2
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:38) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma2 = 0
soma1 = 0
s = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[i] < 80.0):
		soma2 = soma2 + v[i]
	s = s + 1
d = sum(v) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:36:33) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
d = sum(v) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
d = sum(v) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:02) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
tf = zeros(int(v), dtype)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (a < size(v)):
	if (v[i] >= 80.0):
		tf = tf[a]
d = sum(tf) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:29) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
tf = zeros(int(v), dtype)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (a < size(v)):
	if (v[i] >= 80.0):
		tf = tf[a]
d = (sum(v) - tf) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:43:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (a < size(v)):
	if (v[i] >= 80.0):
		tf = tf[a]
d = (sum(v) - tf) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:44:40) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		tf = tf[a]
d = (sum(v) - tf) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:00) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		tf = v[a]
d = (sum(v) - tf) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:42) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
d = (sum(v) - c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:55) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
d = (sum(v) - c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
	i = i + 1
d = (sum(v) - c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:57) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
	i = i + 1
d = (sum(v) - c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
	s = s + 1
d = (sum(v) - c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:50) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
	s = s + 1
d = (sum(v) + c) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:49:01) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor de custos: ")))
i = 0
soma1 = 0
desc = 15 / 100
s = 0
a = 0
c = 0
tf = zeros(int(size(v)), dtype=int)
while (i < size(v)):
	if (v[i] >= 80.0):
		soma1 = soma1 + v[i] * desc
	i = i + 1
while (s < size(v)):
	if (v[a] >= 80.0):
		c = tf[a]
	s = s + 1
d = (sum(v) - sum(c)) + soma1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
